@@ -116,5 +116,8 @@ $arrLangModule = array(
 'Last name' => 'Last name',
 'National ID' => 'National ID',
 'External site' => 'External site',
+
+'Blind transfer' => 'Blind transfer',
+'Attended transfer' => 'Attended transfer',
 );
 ?>
