@@ -116,5 +116,7 @@ $arrLangModule = array(
 'Last name' => 'Apellido',
 'National ID' => 'Cédula/RUC',
 'External site' => 'Sitio externo',
+'Blind transfer' => 'Transferencia ciega',
+'Attended transfer' => 'Transferencia atendida',
 );
 ?>
